@@ -160,7 +160,7 @@ class cmd_dpush(Command):
             target_branch.pull(source_branch)
             no_rebase = True
         else:
-            revid_map, fileid_map = target_branch.dpull(source_branch)
+            revid_map = target_branch.dpull(source_branch)
         # We successfully created the target, remember it
         if source_branch.get_push_location() is None or remember:
             source_branch.set_push_location(target_branch.base)
