@@ -14,6 +14,8 @@ bzr-svn 0.5.0~rc2				UNRELEASED
    * Fix pushing to repositories not allowing the setting of revision 
      properties.
 
+   * Deal with newly appearing file ids correctly in dpush(). (#300979)
+
 bzr-svn 0.5.0~rc1			2008-12-08
 
   CHANGES
